form center align issue

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1960,10 +1960,7 @@ legend + .control-group {
 }
 
 .form-horizontal .control-label {
-  float: left;
-  width: 160px;
-  padding-top: 5px;
-  text-align: right;
+  margin-left:-150px;
 }
 
 .form-horizontal .controls {
